--- a/configs/x86_64.config
+++ b/configs/x86_64.config
@@ -314,7 +314,7 @@ CONFIG_PACKAGE_luci-app-wrtbwmon=y
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 CONFIG_PACKAGE_luci-app-zerotier=y
 
-
+CONFIG_PACKAGE_luci-app-ddns-go=y
 CONFIG_PACKAGE_oscam=y
 CONFIG_PACKAGE_luci-app-oscam=y
 CONFIG_PACKAGE_luci-app-tencentddns=y
