--- a/configs/x86_64.config
+++ b/configs/x86_64.config
@@ -312,6 +312,16 @@ CONFIG_PACKAGE_luci-app-wrtbwmon=y
 CONFIG_PACKAGE_luci-app-xlnetacc=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 
+CONFIG_PACKAGE_luci-app-ddns-go=y
+CONFIG_PACKAGE_oscam=y
+CONFIG_PACKAGE_luci-app-oscam=y
+CONFIG_PACKAGE_luci-app-tencentddns=y
+CONFIG_PACKAGE_luci-app-pushbot=y
+CONFIG_PACKAGE_luci-app-store=y
+CONFIG_PACKAGE_lucky=y
+CONFIG_PACKAGE_luci-app-lucky=y
+
+
 # Themes
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-atmaterial=y
